@@ -831,6 +831,9 @@ Release 0.18.2 - Unreleased
     HADOOP-3614. Fix a bug that Datanode may use an old GenerationStamp to get
     meta file. (szetszwo)
 
+    HADOOP-4314. Simulated datanodes should not include blocks that are still
+    being written in their block report. (Raghu Angadi)
+
 Release 0.18.1 - 2008-09-17
 
   IMPROVEMENTS
